Added .travis.yml and edited makefile.

--- a/notebook/SchedInterface-Example.ipynb
+++ b/notebook/SchedInterface-Example.ipynb
@@ -20,13 +20,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "First ensure you are in the correct directory. (You might not need to do this command.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/gcallah/GitProjects/Scheduler/scheduler\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd ../scheduler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Loading the example data\n",
     "To do this run the cell below (Ctrl + Enter)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +106,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,156 +157,156 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>MON</td>\n",
+       "      <td>biology 2</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>10:00 to 11:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TUES</td>\n",
+       "      <td>calculus 1</td>\n",
+       "      <td>Lisa Mullen</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>11:00 to 12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TUES</td>\n",
        "      <td>calculus 4</td>\n",
        "      <td>Tim Simpson</td>\n",
        "      <td>655</td>\n",
-       "      <td>17:00 to 18:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>TUES</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>17:00 to 18:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>WED</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>Lisa Jones</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>14:00 to 15:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>WED</td>\n",
-       "      <td>chemistry</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>13:00 to 14:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>WED</td>\n",
-       "      <td>biochemistry</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>11:30 to 13:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>WED</td>\n",
-       "      <td>biology 1</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>10:00 to 11:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>WED</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>433</td>\n",
        "      <td>09:00 to 10:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>7</td>\n",
+       "      <th>3</th>\n",
        "      <td>WED</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Simon Valinski</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>16:30 to 17:30</td>\n",
+       "      <td>physics</td>\n",
+       "      <td>John Smith</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>09:30 to 10:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
+       "      <th>4</th>\n",
+       "      <td>WED</td>\n",
+       "      <td>biology 1</td>\n",
+       "      <td>Mike Williams</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>13:00 to 14:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>WED</td>\n",
+       "      <td>molecular biology</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>08:30 to 09:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>WED</td>\n",
+       "      <td>calculus 1</td>\n",
+       "      <td>Lisa Mullen</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>12:00 to 13:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>WED</td>\n",
        "      <td>calculus 4</td>\n",
        "      <td>Tim Simpson</td>\n",
-       "      <td>433</td>\n",
-       "      <td>15:00 to 16:00</td>\n",
+       "      <td>115a</td>\n",
+       "      <td>15:30 to 16:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <th>8</th>\n",
        "      <td>THUR</td>\n",
        "      <td>physics</td>\n",
-       "      <td>Lisa Jones</td>\n",
+       "      <td>John Smith</td>\n",
        "      <td>745b</td>\n",
-       "      <td>13:30 to 14:30</td>\n",
+       "      <td>09:30 to 10:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>10</td>\n",
+       "      <th>9</th>\n",
+       "      <td>THUR</td>\n",
+       "      <td>chemistry</td>\n",
+       "      <td>Gregg Woods</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>16:00 to 17:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
        "      <td>THUR</td>\n",
        "      <td>biochemistry</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>201</td>\n",
-       "      <td>11:00 to 12:30</td>\n",
+       "      <td>Gregg Woods</td>\n",
+       "      <td>745a</td>\n",
+       "      <td>14:00 to 15:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>11</td>\n",
+       "      <th>11</th>\n",
+       "      <td>THUR</td>\n",
+       "      <td>biology 1</td>\n",
+       "      <td>Mike Williams</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>11:30 to 13:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
        "      <td>THUR</td>\n",
        "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>201</td>\n",
+       "      <td>09:30 to 10:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>THUR</td>\n",
+       "      <td>calculus 1</td>\n",
+       "      <td>Lisa Mullen</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>11:00 to 12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>THUR</td>\n",
+       "      <td>astrophysics</td>\n",
+       "      <td>Simon Valinski</td>\n",
        "      <td>115a</td>\n",
        "      <td>10:00 to 11:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>THUR</td>\n",
-       "      <td>molecular biology</td>\n",
-       "      <td>Peter Parker</td>\n",
+       "      <th>15</th>\n",
+       "      <td>FRI</td>\n",
+       "      <td>physics</td>\n",
+       "      <td>John Smith</td>\n",
        "      <td>115a</td>\n",
-       "      <td>12:30 to 13:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>THUR</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Simon Valinski</td>\n",
-       "      <td>745b</td>\n",
        "      <td>08:30 to 09:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>14</td>\n",
-       "      <td>THUR</td>\n",
-       "      <td>astrophysics</td>\n",
-       "      <td>Simon Valinski</td>\n",
-       "      <td>666</td>\n",
-       "      <td>09:30 to 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>FRI</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>Lisa Jones</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>09:30 to 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>16</td>\n",
+       "      <th>16</th>\n",
        "      <td>FRI</td>\n",
        "      <td>chemistry</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>13:00 to 14:30</td>\n",
+       "      <td>Gregg Woods</td>\n",
+       "      <td>201</td>\n",
+       "      <td>09:30 to 11:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>17</td>\n",
+       "      <th>17</th>\n",
        "      <td>FRI</td>\n",
-       "      <td>biology 1</td>\n",
+       "      <td>biochemistry</td>\n",
+       "      <td>Gregg Woods</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>16:30 to 18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>FRI</td>\n",
+       "      <td>biology 2</td>\n",
        "      <td>Peter Parker</td>\n",
        "      <td>115b</td>\n",
-       "      <td>09:00 to 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>18</td>\n",
-       "      <td>FRI</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Simon Valinski</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>14:00 to 15:00</td>\n",
+       "      <td>13:00 to 14:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -290,25 +314,25 @@
       ],
       "text/plain": [
        "     Day             Course       Professor  Room          Period\n",
-       "0    MON         calculus 4     Tim Simpson   655  17:00 to 18:00\n",
-       "1   TUES          biology 2    Rachel Smith  745b  17:00 to 18:00\n",
-       "2    WED            physics      Lisa Jones  115a  14:00 to 15:00\n",
-       "3    WED          chemistry    Peter Parker  115a  13:00 to 14:30\n",
-       "4    WED       biochemistry    Peter Parker  745b  11:30 to 13:00\n",
-       "5    WED          biology 1    Peter Parker  115b  10:00 to 11:30\n",
-       "6    WED          biology 2    Rachel Smith   433  09:00 to 10:00\n",
-       "7    WED         calculus 1  Simon Valinski  115a  16:30 to 17:30\n",
-       "8    WED         calculus 4     Tim Simpson   433  15:00 to 16:00\n",
-       "9   THUR            physics      Lisa Jones  745b  13:30 to 14:30\n",
-       "10  THUR       biochemistry    Peter Parker   201  11:00 to 12:30\n",
-       "11  THUR          biology 2    Rachel Smith  115a  10:00 to 11:00\n",
-       "12  THUR  molecular biology    Peter Parker  115a  12:30 to 13:30\n",
-       "13  THUR         calculus 1  Simon Valinski  745b  08:30 to 09:30\n",
-       "14  THUR       astrophysics  Simon Valinski   666  09:30 to 10:30\n",
-       "15   FRI            physics      Lisa Jones  745b  09:30 to 10:30\n",
-       "16   FRI          chemistry    Peter Parker  115a  13:00 to 14:30\n",
-       "17   FRI          biology 1    Peter Parker  115b  09:00 to 10:30\n",
-       "18   FRI         calculus 1  Simon Valinski  745b  14:00 to 15:00"
+       "0    MON          biology 2    Peter Parker  745b  10:00 to 11:00\n",
+       "1   TUES         calculus 1     Lisa Mullen  745b  11:00 to 12:00\n",
+       "2   TUES         calculus 4     Tim Simpson   655  09:00 to 10:00\n",
+       "3    WED            physics      John Smith  115b  09:30 to 10:30\n",
+       "4    WED          biology 1   Mike Williams  115b  13:00 to 14:30\n",
+       "5    WED  molecular biology    Peter Parker  115b  08:30 to 09:30\n",
+       "6    WED         calculus 1     Lisa Mullen  745b  12:00 to 13:00\n",
+       "7    WED         calculus 4     Tim Simpson  115a  15:30 to 16:30\n",
+       "8   THUR            physics      John Smith  745b  09:30 to 10:30\n",
+       "9   THUR          chemistry     Gregg Woods  115b  16:00 to 17:30\n",
+       "10  THUR       biochemistry     Gregg Woods  745a  14:00 to 15:30\n",
+       "11  THUR          biology 1   Mike Williams  115b  11:30 to 13:00\n",
+       "12  THUR          biology 2    Peter Parker   201  09:30 to 10:30\n",
+       "13  THUR         calculus 1     Lisa Mullen  745b  11:00 to 12:00\n",
+       "14  THUR       astrophysics  Simon Valinski  115a  10:00 to 11:00\n",
+       "15   FRI            physics      John Smith  115a  08:30 to 09:30\n",
+       "16   FRI          chemistry     Gregg Woods   201  09:30 to 11:00\n",
+       "17   FRI       biochemistry     Gregg Woods  745b  16:30 to 18:00\n",
+       "18   FRI          biology 2    Peter Parker  115b  13:00 to 14:00"
       ]
      },
      "metadata": {},
@@ -318,6 +342,13 @@
    "source": [
     "show_me_the_schedule()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -336,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
