--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#cd ../scheduler"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,19 +14,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "First we ought to get into the correct directory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/gcallah/GitProjects/Scheduler/scheduler\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd ../scheduler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case you haven't installed the pandas or xlrd packages, the next cell will install them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (0.24.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.0 in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (from pandas) (2.6.1)\n",
+      "Requirement already satisfied: pytz>=2011k in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (from pandas) (2017.2)\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (from pandas) (1.13.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (from python-dateutil>=2.5.0->pandas) (1.12.0)\n",
+      "\u001b[33mWARNING: You are using pip version 19.1.1, however version 19.2.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already satisfied: xlrd in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (1.2.0)\n",
+      "\u001b[33mWARNING: You are using pip version 19.1.1, however version 19.2.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install pandas\n",
+    "!pip3 install xlrd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Option A\n",
+    "\n",
+    "*So let's cut the A and B options and just use A!*\n",
     "\n",
     "Here we will be loading from the excel file 'my_data.xl' which you can download, edit with spreadsheet software and reupload here. When you have done this please run the cell below. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded successfully!\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip3 install pandas\n",
-    "!pip3 install xlrd\n",
     "\n",
     "import pandas as pd\n",
     "from IPython.display import display \n",
@@ -79,7 +136,8 @@
     "    courses.append(course)\n",
     "    course_no_students[course] = int(row['course_no_students'])\n",
     "    course_mins[course] = int(row['course_mins'])\n",
-    "    course_days_weekly[course] = int(row['course_days_weekly'])"
+    "    course_days_weekly[course] = int(row['course_days_weekly'])\n",
+    "print(\"Data loaded successfully!\")"
    ]
   },
   {
@@ -91,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,11 +283,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Smith\n",
+      "Lisa Jones\n",
+      "Mike Williams\n",
+      "Tim Simpson\n",
+      "Rachel Smith\n",
+      "Gregg Woods\n",
+      "Simon Valinski\n",
+      "Chu Yen\n",
+      "Peter Parker\n",
+      "Lisa Mullen\n",
+      "Elizabeth Walker\n",
+      "Brian K. Dickson\n",
+      "Jamir Abdullah\n"
+     ]
+    }
+   ],
    "source": [
     "print('\\n'.join(professors))"
    ]
@@ -243,11 +321,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "655\n",
+      "666\n",
+      "745a\n",
+      "745b\n",
+      "433\n",
+      "201\n",
+      "115a\n",
+      "115b\n"
+     ]
+    }
+   ],
    "source": [
     "print('\\n'.join(rooms))"
    ]
@@ -261,9 +354,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "physics\n",
+      "chemistry\n",
+      "biochemistry\n",
+      "biology 1\n",
+      "biology 2\n",
+      "molecular biology\n",
+      "calculus 1\n",
+      "calculus 4\n",
+      "astrophysics\n"
+     ]
+    }
+   ],
    "source": [
     "print('\\n'.join(courses))"
    ]
@@ -291,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def time_formatter(course,start_time):\n",
+    "def time_formatter(course, start_time):\n",
     "    hs,ms = start_time\n",
     "    end = hs*6 + ms//10 + course_mins[course]//10\n",
-    "    end_time = (end//6,(end - (end//6)*6)*10)\n",
+    "    end_time = (end//6, (end - (end // 6) * 6) * 10)\n",
     "    he,me = end_time\n",
     "    output = '{:0>2}'.format(hs)+':'+'{:0>2}'.format(ms)+' to ' + '{:0>2}'.format(he)+':'+ '{:0>2}'.format(me) \n",
     "    return output"
@@ -353,7 +462,7 @@
     "weekdays = ['mon','tues','wed','thur','fri']\n",
     "\n",
     "columns = ['Day','Course','Professor', 'Room','Period']\n",
-    "df_out = pd.DataFrame(None,columns=columns)\n",
+    "df_out = pd.DataFrame(None, columns=columns)\n",
     "for day in weekdays:\n",
     "    schedule = full_schedule[day]\n",
     "    print(day.upper())\n",
@@ -569,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
