Added proper spacing to all comments in cspsolver.py file

--- a/notebook/SchedInterface.ipynb
+++ b/notebook/SchedInterface.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/gcallah/GitProjects/Scheduler/scheduler\n"
+      "C:\\Users\\dolly\\Scheduler\\scheduler\n"
      ]
     }
    ],
@@ -50,16 +50,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (0.24.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (from pandas) (2.6.1)\n",
-      "Requirement already satisfied: pytz>=2011k in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (from pandas) (2017.2)\n",
-      "Requirement already satisfied: numpy>=1.12.0 in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (from pandas) (1.13.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (from python-dateutil>=2.5.0->pandas) (1.12.0)\n",
-      "\u001b[33mWARNING: You are using pip version 19.1.1, however version 19.2.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already satisfied: xlrd in /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages (1.2.0)\n",
-      "\u001b[33mWARNING: You are using pip version 19.1.1, however version 19.2.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: pandas in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (0.25.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2.8.0)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (2019.2)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from pandas) (1.17.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n",
+      "Requirement already satisfied: xlrd in c:\\users\\dolly\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages (1.2.0)\n"
      ]
     }
    ],
@@ -81,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +207,7 @@
      "text": [
       "physics\n",
       "astrophysics\n",
-      "caculus 1\n",
+      "calculus 1\n",
       "calculus 4\n",
       "biology 1\n",
       "biology 2\n",
@@ -235,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -321,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -354,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -511,146 +507,182 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>mon</td>\n",
        "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>14:00 to 15:00</td>\n",
+       "      <td>John Smith</td>\n",
+       "      <td>115a</td>\n",
+       "      <td>10:30 to 11:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>mon</td>\n",
-       "      <td>calculus 4</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>433</td>\n",
-       "      <td>16:00 to 17:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>mon</td>\n",
-       "      <td>biology 1</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>09:00 to 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>1</td>\n",
        "      <td>mon</td>\n",
        "      <td>chemistry</td>\n",
-       "      <td>John Smith</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>09:30 to 11:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>tues</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>13:00 to 14:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>tues</td>\n",
-       "      <td>biochemistry</td>\n",
        "      <td>Peter Parker</td>\n",
-       "      <td>433</td>\n",
-       "      <td>09:30 to 11:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>wed</td>\n",
-       "      <td>astrophysics</td>\n",
-       "      <td>Simon Valinski</td>\n",
        "      <td>655</td>\n",
-       "      <td>13:30 to 14:30</td>\n",
+       "      <td>11:30 to 13:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>wed</td>\n",
-       "      <td>calculus 4</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>16:30 to 17:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>wed</td>\n",
-       "      <td>biology 1</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>12:00 to 13:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>wed</td>\n",
+       "      <td>2</td>\n",
+       "      <td>mon</td>\n",
        "      <td>biology 2</td>\n",
        "      <td>Rachel Smith</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>11:00 to 12:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>wed</td>\n",
-       "      <td>molecular biology</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>745a</td>\n",
-       "      <td>11:00 to 12:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>wed</td>\n",
-       "      <td>chemistry</td>\n",
-       "      <td>John Smith</td>\n",
-       "      <td>666</td>\n",
-       "      <td>08:30 to 10:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>thur</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>12:00 to 13:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>thur</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Rachel Smith</td>\n",
-       "      <td>201</td>\n",
+       "      <td>115b</td>\n",
        "      <td>14:30 to 15:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>fri</td>\n",
+       "      <td>3</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>calculus 4</td>\n",
+       "      <td>Lisa Mullen</td>\n",
+       "      <td>433</td>\n",
+       "      <td>11:30 to 12:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>tues</td>\n",
+       "      <td>biochemistry</td>\n",
+       "      <td>Gregg Woods</td>\n",
+       "      <td>433</td>\n",
+       "      <td>15:30 to 17:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>tues</td>\n",
+       "      <td>biology 1</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>08:00 to 09:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>tues</td>\n",
        "      <td>biology 2</td>\n",
        "      <td>Rachel Smith</td>\n",
+       "      <td>655</td>\n",
+       "      <td>09:00 to 10:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>tues</td>\n",
+       "      <td>calculus 1</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>115a</td>\n",
+       "      <td>11:30 to 12:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>tues</td>\n",
+       "      <td>calculus 4</td>\n",
+       "      <td>Lisa Mullen</td>\n",
+       "      <td>745a</td>\n",
+       "      <td>09:30 to 10:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>tues</td>\n",
+       "      <td>astrophysics</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>10:30 to 11:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>wed</td>\n",
+       "      <td>biochemistry</td>\n",
+       "      <td>Gregg Woods</td>\n",
        "      <td>201</td>\n",
+       "      <td>15:30 to 17:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>wed</td>\n",
+       "      <td>biology 2</td>\n",
+       "      <td>Rachel Smith</td>\n",
+       "      <td>115a</td>\n",
+       "      <td>14:00 to 15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>thur</td>\n",
+       "      <td>physics</td>\n",
+       "      <td>John Smith</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>11:00 to 12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>thur</td>\n",
+       "      <td>molecular biology</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>666</td>\n",
+       "      <td>12:30 to 13:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>thur</td>\n",
+       "      <td>calculus 1</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>115a</td>\n",
        "      <td>16:30 to 17:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>physics</td>\n",
+       "      <td>John Smith</td>\n",
+       "      <td>115a</td>\n",
+       "      <td>10:30 to 11:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>chemistry</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>655</td>\n",
+       "      <td>12:00 to 13:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>biology 1</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>10:30 to 12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>calculus 1</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>11:30 to 12:30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Day             Course         Professor  Room          Period\n",
-       "0    mon            physics  Brian K. Dickson  745b  14:00 to 15:00\n",
-       "1    mon         calculus 4  Brian K. Dickson   433  16:00 to 17:00\n",
-       "2    mon          biology 1      Peter Parker  745b  09:00 to 10:30\n",
-       "3    mon          chemistry        John Smith  115b  09:30 to 11:00\n",
-       "4   tues            physics  Brian K. Dickson  115b  13:00 to 14:00\n",
-       "5   tues       biochemistry      Peter Parker   433  09:30 to 11:00\n",
-       "6    wed       astrophysics    Simon Valinski   655  13:30 to 14:30\n",
-       "7    wed         calculus 4  Brian K. Dickson  745b  16:30 to 17:30\n",
-       "8    wed          biology 1      Peter Parker  745b  12:00 to 13:30\n",
-       "9    wed          biology 2      Rachel Smith  745b  11:00 to 12:00\n",
-       "10   wed  molecular biology      Peter Parker  745a  11:00 to 12:00\n",
-       "11   wed          chemistry        John Smith   666  08:30 to 10:00\n",
-       "12  thur            physics  Brian K. Dickson  745b  12:00 to 13:00\n",
-       "13  thur          biology 2      Rachel Smith   201  14:30 to 15:30\n",
-       "14   fri          biology 2      Rachel Smith   201  16:30 to 17:30"
+       "     Day             Course     Professor  Room          Period\n",
+       "0    mon            physics    John Smith  115a  10:30 to 11:30\n",
+       "1    mon          chemistry  Peter Parker   655  11:30 to 13:00\n",
+       "2    mon          biology 2  Rachel Smith  115b  14:30 to 15:30\n",
+       "3    mon         calculus 4   Lisa Mullen   433  11:30 to 12:30\n",
+       "4   tues       biochemistry   Gregg Woods   433  15:30 to 17:00\n",
+       "5   tues          biology 1  Peter Parker  745b  08:00 to 09:30\n",
+       "6   tues          biology 2  Rachel Smith   655  09:00 to 10:00\n",
+       "7   tues         calculus 1       Chu Yen  115a  11:30 to 12:30\n",
+       "8   tues         calculus 4   Lisa Mullen  745a  09:30 to 10:30\n",
+       "9   tues       astrophysics       Chu Yen  115b  10:30 to 11:30\n",
+       "10   wed       biochemistry   Gregg Woods   201  15:30 to 17:00\n",
+       "11   wed          biology 2  Rachel Smith  115a  14:00 to 15:00\n",
+       "12  thur            physics    John Smith  115b  11:00 to 12:00\n",
+       "13  thur  molecular biology  Peter Parker   666  12:30 to 13:30\n",
+       "14  thur         calculus 1       Chu Yen  115a  16:30 to 17:30\n",
+       "15   fri            physics    John Smith  115a  10:30 to 11:30\n",
+       "16   fri          chemistry  Peter Parker   655  12:00 to 13:30\n",
+       "17   fri          biology 1  Peter Parker  745b  10:30 to 12:00\n",
+       "18   fri         calculus 1       Chu Yen  115b  11:30 to 12:30"
       ]
      },
      "metadata": {},
@@ -660,6 +692,13 @@
    "source": [
     "display(df_out)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -678,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
