--- a/notebook/SchedInterface-Excel.ipynb
+++ b/notebook/SchedInterface-Excel.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/gcallah/GitProjects/Scheduler/scheduler\n"
+      "C:\\Users\\dolly\\Scheduler\\scheduler\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,148 +150,148 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>MON</td>\n",
        "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>10:30 to 11:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MON</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Tim Simpson</td>\n",
+       "      <td>Lisa Jones</td>\n",
        "      <td>115a</td>\n",
-       "      <td>09:30 to 10:30</td>\n",
+       "      <td>13:30 to 14:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>1</td>\n",
        "      <td>MON</td>\n",
        "      <td>calculus 4</td>\n",
-       "      <td>Jamir Abdullah'</td>\n",
-       "      <td>433</td>\n",
-       "      <td>14:00 to 15:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MON</td>\n",
-       "      <td>molecular biology</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>666</td>\n",
-       "      <td>12:00 to 13:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MON</td>\n",
-       "      <td>chemistry</td>\n",
-       "      <td>Jamir Abdullah'</td>\n",
-       "      <td>666</td>\n",
-       "      <td>15:00 to 16:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>TUES</td>\n",
-       "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>115a</td>\n",
-       "      <td>09:00 to 10:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>TUES</td>\n",
-       "      <td>calculus 4</td>\n",
-       "      <td>Jamir Abdullah'</td>\n",
+       "      <td>Elizabeth Walker</td>\n",
        "      <td>655</td>\n",
-       "      <td>16:30 to 17:30</td>\n",
+       "      <td>15:00 to 16:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>MON</td>\n",
+       "      <td>biology 2</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>201</td>\n",
+       "      <td>10:00 to 11:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>MON</td>\n",
+       "      <td>biochemistry</td>\n",
+       "      <td>Gregg Woods</td>\n",
+       "      <td>655</td>\n",
+       "      <td>09:00 to 10:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
        "      <td>TUES</td>\n",
-       "      <td>biology 1</td>\n",
-       "      <td>Mike Williams</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>11:00 to 12:30</td>\n",
+       "      <td>calculus 1</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>15:00 to 16:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <td>5</td>\n",
        "      <td>TUES</td>\n",
        "      <td>biology 2</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>433</td>\n",
+       "      <td>12:30 to 13:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>TUES</td>\n",
+       "      <td>molecular biology</td>\n",
        "      <td>Peter Parker</td>\n",
        "      <td>433</td>\n",
        "      <td>13:30 to 14:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>7</td>\n",
        "      <td>WED</td>\n",
        "      <td>physics</td>\n",
-       "      <td>Brian K. Dickson</td>\n",
-       "      <td>115b</td>\n",
-       "      <td>09:00 to 10:00</td>\n",
+       "      <td>Lisa Jones</td>\n",
+       "      <td>115a</td>\n",
+       "      <td>12:00 to 13:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <td>8</td>\n",
+       "      <td>WED</td>\n",
+       "      <td>astrophysics</td>\n",
+       "      <td>Simon Valinski</td>\n",
+       "      <td>655</td>\n",
+       "      <td>10:00 to 11:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
        "      <td>WED</td>\n",
        "      <td>calculus 1</td>\n",
-       "      <td>Tim Simpson</td>\n",
+       "      <td>Chu Yen</td>\n",
        "      <td>745b</td>\n",
-       "      <td>11:00 to 12:00</td>\n",
+       "      <td>13:30 to 14:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <td>10</td>\n",
        "      <td>WED</td>\n",
+       "      <td>calculus 4</td>\n",
+       "      <td>Elizabeth Walker</td>\n",
+       "      <td>201</td>\n",
+       "      <td>09:30 to 10:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>WED</td>\n",
+       "      <td>chemistry</td>\n",
+       "      <td>Gregg Woods</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>09:30 to 11:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>THUR</td>\n",
+       "      <td>physics</td>\n",
+       "      <td>Lisa Jones</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>10:00 to 11:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>THUR</td>\n",
+       "      <td>biology 1</td>\n",
+       "      <td>Mike Williams</td>\n",
+       "      <td>745b</td>\n",
+       "      <td>09:30 to 11:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>THUR</td>\n",
+       "      <td>biology 2</td>\n",
+       "      <td>Peter Parker</td>\n",
+       "      <td>666</td>\n",
+       "      <td>13:00 to 14:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>FRI</td>\n",
+       "      <td>calculus 1</td>\n",
+       "      <td>Chu Yen</td>\n",
+       "      <td>115b</td>\n",
+       "      <td>16:30 to 17:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>FRI</td>\n",
        "      <td>biology 1</td>\n",
        "      <td>Mike Williams</td>\n",
        "      <td>115b</td>\n",
        "      <td>11:00 to 12:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>WED</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>655</td>\n",
-       "      <td>09:30 to 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>WED</td>\n",
-       "      <td>biochemistry</td>\n",
-       "      <td>Gregg Woods</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>09:30 to 11:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>THUR</td>\n",
-       "      <td>astrophysics</td>\n",
-       "      <td>Simon Valinski</td>\n",
-       "      <td>655</td>\n",
-       "      <td>10:30 to 11:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>THUR</td>\n",
-       "      <td>biology 2</td>\n",
-       "      <td>Peter Parker</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>10:30 to 11:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>FRI</td>\n",
-       "      <td>calculus 1</td>\n",
-       "      <td>Tim Simpson</td>\n",
-       "      <td>745b</td>\n",
-       "      <td>09:30 to 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <td>17</td>\n",
        "      <td>FRI</td>\n",
        "      <td>chemistry</td>\n",
-       "      <td>Jamir Abdullah'</td>\n",
+       "      <td>Gregg Woods</td>\n",
        "      <td>115b</td>\n",
-       "      <td>15:30 to 17:00</td>\n",
+       "      <td>14:30 to 16:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -299,24 +299,24 @@
       ],
       "text/plain": [
        "     Day             Course         Professor  Room          Period\n",
-       "0    MON            physics  Brian K. Dickson  745b  10:30 to 11:30\n",
-       "1    MON         calculus 1       Tim Simpson  115a  09:30 to 10:30\n",
-       "2    MON         calculus 4   Jamir Abdullah'   433  14:00 to 15:00\n",
-       "3    MON  molecular biology      Peter Parker   666  12:00 to 13:00\n",
-       "4    MON          chemistry   Jamir Abdullah'   666  15:00 to 16:30\n",
-       "5   TUES            physics  Brian K. Dickson  115a  09:00 to 10:00\n",
-       "6   TUES         calculus 4   Jamir Abdullah'   655  16:30 to 17:30\n",
-       "7   TUES          biology 1     Mike Williams  115b  11:00 to 12:30\n",
-       "8   TUES          biology 2      Peter Parker   433  13:30 to 14:30\n",
-       "9    WED            physics  Brian K. Dickson  115b  09:00 to 10:00\n",
-       "10   WED         calculus 1       Tim Simpson  745b  11:00 to 12:00\n",
-       "11   WED          biology 1     Mike Williams  115b  11:00 to 12:30\n",
-       "12   WED          biology 2      Peter Parker   655  09:30 to 10:30\n",
-       "13   WED       biochemistry       Gregg Woods  745b  09:30 to 11:00\n",
-       "14  THUR       astrophysics    Simon Valinski   655  10:30 to 11:30\n",
-       "15  THUR          biology 2      Peter Parker  745b  10:30 to 11:30\n",
-       "16   FRI         calculus 1       Tim Simpson  745b  09:30 to 10:30\n",
-       "17   FRI          chemistry   Jamir Abdullah'  115b  15:30 to 17:00"
+       "0    MON            physics        Lisa Jones  115a  13:30 to 14:30\n",
+       "1    MON         calculus 4  Elizabeth Walker   655  15:00 to 16:00\n",
+       "2    MON          biology 2      Peter Parker   201  10:00 to 11:00\n",
+       "3    MON       biochemistry       Gregg Woods   655  09:00 to 10:30\n",
+       "4   TUES         calculus 1           Chu Yen  745b  15:00 to 16:00\n",
+       "5   TUES          biology 2      Peter Parker   433  12:30 to 13:30\n",
+       "6   TUES  molecular biology      Peter Parker   433  13:30 to 14:30\n",
+       "7    WED            physics        Lisa Jones  115a  12:00 to 13:00\n",
+       "8    WED       astrophysics    Simon Valinski   655  10:00 to 11:00\n",
+       "9    WED         calculus 1           Chu Yen  745b  13:30 to 14:30\n",
+       "10   WED         calculus 4  Elizabeth Walker   201  09:30 to 10:30\n",
+       "11   WED          chemistry       Gregg Woods  115b  09:30 to 11:00\n",
+       "12  THUR            physics        Lisa Jones  745b  10:00 to 11:00\n",
+       "13  THUR          biology 1     Mike Williams  745b  09:30 to 11:00\n",
+       "14  THUR          biology 2      Peter Parker   666  13:00 to 14:00\n",
+       "15   FRI         calculus 1           Chu Yen  115b  16:30 to 17:30\n",
+       "16   FRI          biology 1     Mike Williams  115b  11:00 to 12:30\n",
+       "17   FRI          chemistry       Gregg Woods  115b  14:30 to 16:00"
       ]
      },
      "metadata": {},
@@ -351,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
